--- a/java-web-ru/deploy/Dockerfile
+++ b/java-web-ru/deploy/Dockerfile
@@ -2,6 +2,6 @@ FROM gradle:7.4.2-jdk17
 
 WORKDIR /java-web-ru/deploy
 
-RUN make install
+RUN ./gradlew installDist
 
 CMD ./build/install/deploy/bin/deploy
