--- a/java-web-ru/deploy/Dockerfile
+++ b/java-web-ru/deploy/Dockerfile
@@ -2,4 +2,8 @@ FROM gradle:7.4.2-jdk17
 
 WORKDIR /java-web-ru/deploy
 
-CMD /java-web-ru/deploy/build/install/deploy/bin/deploy
+COPY /java-web-ru/deploy .
+
+RUN gradle installDist
+
+CMD ./build/install/deploy/bin/deploy
